[package]
name = "recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
humantime-serde = "1.1.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thirtyfour = "0.36.1"
tokio = { version = "1.48.0", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }
rbg_client = {path="./rbg_client", package="openapi"}
sanitize-filename = "0.6.0"
env_logger = "0.11.8"
log = "0.4.28"
clap = { version = "4.5.50", features = ["derive", "env"] }
