[package]
name = "recorder"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
thirtyfour = "0.36.1"
tokio = { version = "1.48.0", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }
sanitize-filename = "0.6.0"
env_logger = "0.11.8"
log = "0.4.28"
clap = { version = "4.5.50", features = ["derive", "env"] }
humantime = "2.3.0"
